@@ -1,6 +1,10 @@
+2019-02-10  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
+
+	* cidtype0.c, cidtype2.c: Fix typo.
+
 2019-01-27  Shunsaku Hirata  <shunsaku.hirata74@gmail.com>
 
-	* spc_pdfm.c: Supress warning on tounicode special.
+	* spc_pdfm.c: Suppress a warning in tounicode special.
 	Dvipdfmx had been giving a wrong warning when an optional
 	argument to tounicode special is not supplied.
 
